--- a/requirements-pip.txt
+++ b/requirements-pip.txt
@@ -1,13 +1,15 @@
-av==0.2.2
-conda==3.17.0
-conda-build==1.11.0
-conda-env==2.4.2
-Cython==0.22
-matplotlib==1.4.3
-numpy==1.8.2
-Pillow==2.9.0
-scipy==0.15.1
-six==1.9.0
-dill==0.2.4
-
-
+av==0.2.3
+cycler==0.10.0
+decorator==4.0.10
+dill==0.2.5
+matplotlib==1.5.1
+networkx==1.11
+numpy==1.11.1
+Pillow==3.3.0
+pycairo==1.10.0
+pyparsing==2.1.4
+python-dateutil==2.5.3
+pytz==2016.6.1
+scikit-image==0.12.3
+scipy==0.17.1
+six==1.10.0
