--- a/shot-detector-py-2.7.yml
+++ b/shot-detector-py-2.7.yml
@@ -1,46 +1,53 @@
-name: shot-detector-py-2.7
+name: shot-detector-3.0
 dependencies:
 - cairo=1.12.18=6
-- cycler=0.9.0=py27_0
-- decorator=4.0.6=py27_0
-- dill=0.2.4=py27_0
-- ffmpeg=2.2.4=0
-- fontconfig=2.11.1=5
-- freetype=2.5.5=0
+- cycler=0.10.0=py27_0
+- decorator=4.0.10=py27_0
+- dill=0.2.5=py27_0
+- fontconfig=2.11.1=6
+- freetype=2.5.5=1
+- glib=2.43.0=1
+- harfbuzz=0.9.39=1
 - jbig=2.1=0
-- jpeg=8d=0
-- libgfortran=1.0=0
-- libpng=1.6.17=0
-- libtiff=4.0.6=1
+- jpeg=8d=1
+- libffi=3.2.1=0
+- libgfortran=3.0.0=1
+- libpng=1.6.22=0
+- libtiff=4.0.6=2
 - libxml2=2.9.2=0
-- matplotlib=1.5.0=np110py27_0
-- networkx=1.10=py27_0
-- numpy=1.10.2=py27_0
-- openblas=0.2.14=3
-- openssl=1.0.2d=0
-- pillow=3.0.0=py27_1
-- pip=7.1.2=py27_0
+- matplotlib=1.5.1=np111py27_0
+- mkl=11.3.3=0
+- networkx=1.11=py27_0
+- numpy=1.11.1=py27_0
+- openblas=0.2.14=4
+- openssl=1.0.2h=1
+- pango=1.39.0=1
+- pillow=3.3.0=py27_0
+- pip=8.1.2=py27_0
 - pixman=0.32.6=0
 - py2cairo=1.10.0=py27_2
-- pyav=v0.2.3.post0=0_g8dc4be2_py27
-- pyparsing=2.0.3=py27_0
-- pyqt=4.11.4=py27_1
-- python=2.7.11=0
-- python-dateutil=2.4.2=py27_0
-- pytz=2015.7=py27_0
-- qt=4.8.7=1
+- pycairo=1.10.0=py27_0
+- pyparsing=2.1.4=py27_0
+- pyqt=4.11.4=py27_4
+- python=2.7.12=1
+- python-dateutil=2.5.3=py27_0
+- pytz=2016.6.1=py27_0
+- qt=4.8.7=4
 - readline=6.2=2
-- scikit-image=0.11.3=np110py27_0
-- scipy=0.16.1=np110py27_0
-- setuptools=19.1.1=py27_0
-- sip=4.16.9=py27_0
+- scikit-image=0.12.3=np111py27_1
+- scipy=0.17.1=np111py27_1
+- setuptools=23.0.0=py27_0
+- sip=4.18=py27_0
 - six=1.10.0=py27_0
-- sqlite=3.8.4.1=1
+- soft-matter::ffmpeg=2.2.4=0
+- soft-matter::pyav=v0.2.3.post0=0_g8dc4be2_py27
+- soft-matter::x264=20131217=2
+- sqlite=3.13.0=0
 - tk=8.5.18=0
-- wheel=0.26.0=py27_1
-- x264=20131217=2
-- xz=5.0.5=0
-- zlib=1.2.8=0
+- wheel=0.29.0=py27_0
+- xz=5.2.2=0
+- zlib=1.2.8=3
 - pip:
   - av==0.2.3
+prefix: /opt/conda/anaconda2.7/envs/shot-detector-3.0
 
