--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -36,6 +36,7 @@ pytz=2016.6.1=py27_0
 qt=4.8.7=4
 readline=6.2=2
 scikit-image=0.12.3=np111py27_1
+scikit-learn=0.17.1=np111py27_2
 scipy=0.17.1=np111py27_1
 setuptools=23.0.0=py27_0
 sip=4.18=py27_0
