--- a/requirements-pip.txt
+++ b/requirements-pip.txt
@@ -1,7 +1,10 @@
 av==0.2.3
+coloredlogs==5.0
+colorlog==2.7.0
 cycler==0.10.0
 decorator==4.0.10
 dill==0.2.5
+humanfriendly==1.44.7
 matplotlib==1.5.1
 networkx==1.11
 numpy==1.11.1
@@ -11,5 +14,6 @@ pyparsing==2.1.4
 python-dateutil==2.5.3
 pytz==2016.6.1
 scikit-image==0.12.3
+scikit-learn==0.17.1
 scipy==0.17.1
 six==1.10.0
