--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -3,11 +3,14 @@
 # platform: linux-64
 cairo=1.12.18=6
 cycler=0.10.0=py27_0
+cython=0.24.1=py27_0
 decorator=4.0.10=py27_0
 dill=0.2.5=py27_0
 fontconfig=2.11.1=6
 freetype=2.5.5=1
+gevent=1.1.2=py27_0
 glib=2.43.0=1
+greenlet=0.4.10=py27_0
 harfbuzz=0.9.39=1
 jbig=2.1=0
 jpeg=8d=1
@@ -23,6 +26,9 @@ numpy=1.11.1=py27_0
 openblas=0.2.14=4
 openssl=1.0.2h=1
 pango=1.39.0=1
+path.py=8.2.1=py27_0
+pathlib2=2.1.0=py27_0
+pickleshare=0.7.3=py27_0
 pillow=3.3.0=py27_0
 pip=8.1.2=py27_0
 pixman=0.32.6=0
