--- a/requirements-pip.txt
+++ b/requirements-pip.txt
@@ -2,14 +2,26 @@ av==0.2.3
 coloredlogs==5.0
 colorlog==2.7.0
 cycler==0.10.0
+Cython==0.24.1
 decorator==4.0.10
 dill==0.2.5
+gevent==1.1.2
+greenlet==0.4.10
 humanfriendly==1.44.7
 matplotlib==1.5.1
+multiprocess==0.70.4
 networkx==1.11
 numpy==1.11.1
+path.py==0.0.0
+pathlib2==2.1.0
+pathos==0.2.0
+pickleshare==0.7.3
 Pillow==3.3.0
+pox==0.2.2
+pp==1.6.5
+ppft==1.6.4.6
 pycairo==1.10.0
+pymp-pypi==0.2
 pyparsing==2.1.4
 python-dateutil==2.5.3
 pytz==2016.6.1
