--- a/shot-detector-py-2.7.yml
+++ b/shot-detector-py-2.7.yml
@@ -2,11 +2,14 @@ name: shot-detector-3.0
 dependencies:
 - cairo=1.12.18=6
 - cycler=0.10.0=py27_0
+- cython=0.24.1=py27_0
 - decorator=4.0.10=py27_0
 - dill=0.2.5=py27_0
 - fontconfig=2.11.1=6
 - freetype=2.5.5=1
+- gevent=1.1.2=py27_0
 - glib=2.43.0=1
+- greenlet=0.4.10=py27_0
 - harfbuzz=0.9.39=1
 - jbig=2.1=0
 - jpeg=8d=1
@@ -22,6 +25,9 @@ dependencies:
 - openblas=0.2.14=4
 - openssl=1.0.2h=1
 - pango=1.39.0=1
+- path.py=8.2.1=py27_0
+- pathlib2=2.1.0=py27_0
+- pickleshare=0.7.3=py27_0
 - pillow=3.3.0=py27_0
 - pip=8.1.2=py27_0
 - pixman=0.32.6=0
@@ -53,5 +59,11 @@ dependencies:
   - coloredlogs==5.0
   - colorlog==2.7.0
   - humanfriendly==1.44.7
+  - multiprocess==0.70.4
+  - pathos==0.2.0
+  - pox==0.2.2
+  - pp==1.6.5
+  - ppft==1.6.4.6
+  - pymp-pypi==0.2
 prefix: /opt/conda/anaconda2.7/envs/shot-detector-3.0
 
