--- a/requirements/py27/requirements-conda.txt
+++ b/requirements/py27/requirements-conda.txt
@@ -9,6 +9,7 @@ dill=0.2.5=py27_0
 fontconfig=2.11.1=6
 freetype=2.5.5=1
 future=0.15.2=py27_0
+futures=3.0.5=py27_0
 gevent=1.1.2=py27_0
 glib=2.43.0=1
 greenlet=0.4.10=py27_0
