--- a/requirements/py34/requirements-pip.txt
+++ b/requirements/py34/requirements-pip.txt
@@ -4,8 +4,11 @@ cycler==0.10.0
 decorator==4.0.10
 dill==0.2.5
 future==0.15.2
+gevent==1.1.2
+greenlet==0.4.10
 matplotlib==1.5.1
 multiprocess==0.70.4
+mypy-lang==0.4.3
 networkx==1.11
 numpy==1.11.1
 pathos==0.2.0
@@ -19,3 +22,4 @@ scikit-image==0.12.3
 scikit-learn==0.17.1
 scipy==0.18.0
 six==1.10.0
+typing==3.5.2.2
