--- a/shot-detector-py-2.7.yml
+++ b/shot-detector-py-2.7.yml
@@ -8,6 +8,7 @@ dependencies:
 - fontconfig=2.11.1=6
 - freetype=2.5.5=1
 - future=0.15.2=py27_0
+- futures=3.0.5=py27_0
 - gevent=1.1.2=py27_0
 - glib=2.43.0=1
 - greenlet=0.4.10=py27_0
@@ -57,14 +58,12 @@ dependencies:
 - zlib=1.2.8=3
 - pip:
   - av==0.2.3
-  - coloredlogs==5.0
   - colorlog==2.7.0
-  - humanfriendly==1.44.7
   - multiprocess==0.70.4
   - pathos==0.2.0
   - pox==0.2.2
-  - pp==1.6.5
   - ppft==1.6.4.6
   - pymp-pypi==0.2
+  - typing==3.5.2.2
 prefix: /opt/conda/anaconda2.7/envs/shot-detector-3.0
 
