--- a/requirements/py34/requirements-pip.txt
+++ b/requirements/py34/requirements-pip.txt
@@ -1,8 +1,10 @@
 av==0.2.3
+Avpy==0.1.3
 colorlog==2.7.0
+ConfigArgParse==0.10.0
 cycler==0.10.0
 decorator==4.0.10
-dill==0.2.5
+docutils==0.12
 future==0.15.2
 gevent==1.1.2
 greenlet==0.4.10
@@ -15,6 +17,7 @@ pathos==0.2.0
 Pillow==3.3.0
 pox==0.2.2
 ppft==1.6.4.6
+Pygments==2.1.3
 pyparsing==2.1.4
 python-dateutil==2.5.3
 pytz==2016.6.1
