--- a/config/default.ini
+++ b/config/default.ini
@@ -11,8 +11,8 @@
 ;	input-uri	= 	Bolshie_Glaza_96.lw.und
 ;
 
-input-pattern =/home/w495/Videos/{uri}.mp4
+input-uri =/home/w495/Videos/{uri}.mp4
 
 
-input-uri	  =Djadja_Stepa Milicioner_96.hi.und
+irl	  = [Djadja_Stepa Milicioner_96.hi.und]
 
