--- a/config/default.ini
+++ b/config/default.ini
@@ -1,4 +1,8 @@
 
+
+[Input Options]
+
+
 ;for-stream:
 ;
 ;	input-uri = 'http://localhost:8090/live.flv'
@@ -11,8 +15,27 @@
 ;	input-uri	= 	Bolshie_Glaza_96.lw.und
 ;
 
-input-uri =/home/w495/Videos/{uri}.mp4
+input-uri ={base}/{name}{ext}
+input-uri-base = /home/w495/Videos
+input-uri-name = Djadja_Stepa Milicioner_96.hi.und
+input-uri-ext = .mp4
 
 
-irl	  = [Djadja_Stepa Milicioner_96.hi.und]
+[Plot Options]
+
+plot-xlabel = $t$ [cекунды]
+plot-ylabel = $L_1$
+plot-width = 12.0
+plot-height = 9.0
+plot-format = pdf
+plot-font-family = DejaVu Sans
+plot-font-size = 14
+plot-save-dir = /home/w495/Sync/Dropbox/Public/stud/asp/thethis/nkp-2016/pres/img/video/example/
+
+
+[Shot Detector Options]
+
+video-first-frame 	= 0
+video-last-frame 	= 60
+as-stream			= no
 
