--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include *.txt *.md *.ini *.conf *.yaml *.cnf
 
-recursive-include config *.ini *.conf *.yaml *.cnf
+recursive-include requirements *.txt  *.ini *.conf *.yaml *.cnf
+recursive-include config *.txt *.ini *.conf *.yaml *.cnf
 recursive-include etc *.txt *.py *.conf
 
 
