--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,22 +1,23 @@
 package:
-  name: shot-detector
+  name: shot_detector
   version: "{{ environ['GIT_DESCRIBE_TAG'] }}.post{{ environ['GIT_DESCRIBE_NUMBER'] }}"
 
 source:
   git_url: ../
 
 build:
-  string: {{ environ.get('GIT_BUILD_STR', '') }}_py{{ py }}
+  string: {{ environ.get('GIT_BUILD_STR', 'x') }}_py{{ py }}
   detect_binary_files_with_prefix: 1
 
 requirements:
   build:
     - python
     - setuptools
+    - pyav
 
   run:
     - python
-    - pyav
+    - ffmpeg
 
 about:
   home: https://pypi.python.org/pypi/shot-detector
