--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -6,20 +6,150 @@ source:
   git_url: ../
 
 build:
-  string: {{ environ.get('GIT_BUILD_STR', 'x') }}_py{{ py }}
+  string: {{ environ.get('GIT_BUILD_STR', '') }}_py{{ py }}
   detect_binary_files_with_prefix: 1
 
 requirements:
   build:
     - python
     - setuptools
+    - backports_abc
+    - bokeh
+    - cairo
+    - chest
+    - cloudpickle
+    - cycler
+    - ffmpeg
     - pyav
+    - x264
+    - dask
+    - decorator
+    - dill
+    - fontconfig
+    - freetype
+    - gevent
+    - glib
+    - greenlet
+    - harfbuzz
+    - heapdict
+    - jbig
+    - jinja2
+    - jpeg
+    - libffi
+    - libgfortran
+    - libpng
+    - libtiff
+    - libxml2
+    - locket
+    - markupsafe
+    - matplotlib
+    - mkl
+    - networkx
+    - numpy
+    - openssl
+    - pandas
+    - pango
+    - partd
+    - pillow
+    - pip
+    - pixman
+    - pyparsing
+    - pyqt
+    - python
+    - python-dateutil
+    - pytz
+    - pyyaml
+    - qt
+    - readline
+    - requests
+    - scikit-image
+    - scikit-learn
+    - scipy
+    - setuptools
+    - sip
+    - six
+    - sqlite
+    - tk
+    - toolz
+    - tornado
+    - typing
+    - wheel
+    - xz
+    - yaml
+    - zlib
+
 
   run:
-    - python
     - ffmpeg
+    - python
+    - backports_abc
+    - bokeh
+    - cairo
+    - chest
+    - cloudpickle
+    - cycler
+    - ffmpeg
+    - pyav
+    - x264
+    - dask
+    - decorator
+    - dill
+    - fontconfig
+    - freetype
+    - gevent
+    - glib
+    - greenlet
+    - harfbuzz
+    - heapdict
+    - jbig
+    - jinja2
+    - jpeg
+    - libffi
+    - libgfortran
+    - libpng
+    - libtiff
+    - libxml2
+    - locket
+    - markupsafe
+    - matplotlib
+    - mkl
+    - networkx
+    - numpy
+    - openssl
+    - pandas
+    - pango
+    - partd
+    - pillow
+    - pip
+    - pixman
+    - pyparsing
+    - pyqt
+    - python
+    - python-dateutil
+    - pytz
+    - pyyaml
+    - qt
+    - readline
+    - requests
+    - scikit-image
+    - scikit-learn
+    - scipy
+    - setuptools
+    - sip
+    - six
+    - sqlite
+    - tk
+    - toolz
+    - tornado
+    - typing
+    - wheel
+    - xz
+    - yaml
+    - zlib
+
+
 
 about:
-  home: https://pypi.python.org/pypi/shot-detector
+  home:
   license: BSD
   license_file: LICENSE.txt
