--- a/requirements/py34/requirements-conda.txt
+++ b/requirements/py34/requirements-conda.txt
@@ -1,11 +1,16 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
+backports_abc=0.4=py34_0
+bokeh=0.12.1=py34_0
 cairo=1.12.18=6
+chest=0.2.3=py34_0
+cloudpickle=0.2.1=py34_0
 cycler=0.10.0=py34_0
 ffmpeg=2.2.4=0
 pyav=v0.2.3.post0=0_g8dc4be2_py34
 x264=20131217=2
+dask=0.11.0=py34_0
 decorator=4.0.10=py34_0
 dill=0.2.5=py34_0
 fontconfig=2.11.1=6
@@ -14,19 +19,25 @@ gevent=1.1.2=py34_0
 glib=2.43.0=1
 greenlet=0.4.10=py34_0
 harfbuzz=0.9.39=1
+heapdict=1.0.0=py34_1
 jbig=2.1=0
+jinja2=2.8=py34_1
 jpeg=8d=1
 libffi=3.2.1=0
 libgfortran=3.0.0=1
 libpng=1.6.22=0
 libtiff=4.0.6=2
 libxml2=2.9.2=0
+locket=0.2.0=py34_1
+markupsafe=0.23=py34_2
 matplotlib=1.5.1=np111py34_0
 mkl=11.3.3=0
 networkx=1.11=py34_0
 numpy=1.11.1=py34_0
 openssl=1.0.2h=1
+pandas=0.18.1=np111py34_0
 pango=1.39.0=1
+partd=0.3.6=py34_0
 pillow=3.3.0=py34_0
 pip=8.1.2=py34_0
 pixman=0.32.6=0
@@ -35,8 +46,10 @@ pyqt=4.11.4=py34_4
 python=3.4.5=0
 python-dateutil=2.5.3=py34_0
 pytz=2016.6.1=py34_0
+pyyaml=3.11=py34_4
 qt=4.8.7=4
 readline=6.2=2
+requests=2.11.1=py34_0
 scikit-image=0.12.3=np111py34_1
 scikit-learn=0.17.1=np111py34_2
 scipy=0.18.0=np111py34_0
@@ -45,6 +58,9 @@ sip=4.18=py34_0
 six=1.10.0=py34_0
 sqlite=3.13.0=0
 tk=8.5.18=0
+toolz=0.8.0=py34_0
+tornado=4.4.1=py34_0
 wheel=0.29.0=py34_0
 xz=5.2.2=0
+yaml=0.1.6=0
 zlib=1.2.8=3
