--- a/requirements/py34/requirements-pip.txt
+++ b/requirements/py34/requirements-pip.txt
@@ -1,18 +1,30 @@
 av==0.2.3
 Avpy==0.1.3
+backports-abc==0.4
+bokeh==0.12.1
+chest==0.2.3
+cloudpickle==0.2.1
 colorlog==2.7.0
 ConfigArgParse==0.10.0
 cycler==0.10.0
+dask==0.11.0
 decorator==4.0.10
+dill==0.2.5
 docutils==0.12
 future==0.15.2
 gevent==1.1.2
 greenlet==0.4.10
+HeapDict==1.0.0
+Jinja2==2.8
+locket==0.2.0
+MarkupSafe==0.23
 matplotlib==1.5.1
 multiprocess==0.70.4
 mypy-lang==0.4.3
 networkx==1.11
 numpy==1.11.1
+pandas==0.18.1
+partd==0.3.6
 pathos==0.2.0
 Pillow==3.3.0
 pox==0.2.2
@@ -21,8 +33,12 @@ Pygments==2.1.3
 pyparsing==2.1.4
 python-dateutil==2.5.3
 pytz==2016.6.1
+PyYAML==3.11
+requests==2.11.1
 scikit-image==0.12.3
 scikit-learn==0.17.1
 scipy==0.18.0
 six==1.10.0
+toolz==0.8.0
+tornado==4.4.1
 typing==3.5.2.2
