--- a/requirements/py27/shot-detector.yml
+++ b/requirements/py27/shot-detector.yml
@@ -56,6 +56,7 @@ dependencies:
 - soft-matter::x264=20131217=2
 - sqlite=3.13.0=0
 - tk=8.5.18=0
+- w495::pymp-pypi=0.2=py27_0
 - w495::typing=3.5.2=py27_0
 - wheel=0.29.0=py27_0
 - xz=5.2.2=0
@@ -68,9 +69,7 @@ dependencies:
   - multiprocess==0.70.4
   - pathos==0.2.0
   - pox==0.2.2
-  - ppft==1.6.4.6
   - pymp-pypi==0.2
-  - shot-detector==0.0.4.dev41
   - toolz==0.8.0
   - typing==3.5.2.2
 prefix: /opt/conda/anaconda2.7/envs/shot-detector-2.7
