--- a/requirements/py27/shot-detector.yml
+++ b/requirements/py27/shot-detector.yml
@@ -56,6 +56,7 @@ dependencies:
 - soft-matter::x264=20131217=2
 - sqlite=3.13.0=0
 - tk=8.5.18=0
+- w495::configargparse=0.9.3=py27_0
 - w495::pymp-pypi=0.2=py27_0
 - w495::typing=3.5.2=py27_0
 - wheel=0.29.0=py27_0
