--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -80,76 +80,11 @@ requirements:
     - pymp-pypi
     - pillow
     - future
+    - configargparse
 
   run:
     - ffmpeg
     - python
-    - backports_abc
-    - bokeh
-    - cairo
-    - chest
-    - cloudpickle
-    - cycler
-    - ffmpeg
-    - pyav
-    - x264
-    - dask
-    - decorator
-    - dill
-    - fontconfig
-    - freetype
-    - gevent
-    - glib
-    - greenlet
-    - harfbuzz
-    - heapdict
-    - jbig
-    - jinja2
-    - jpeg
-    - libffi
-    - libgfortran
-    - libpng
-    - libtiff
-    - libxml2
-    - locket
-    - markupsafe
-    - matplotlib
-    - mkl
-    - networkx
-    - numpy
-    - openssl
-    - pandas
-    - pango
-    - partd
-    - pillow
-    - pip
-    - pixman
-    - pyparsing
-    - pyqt
-    - python
-    - python-dateutil
-    - pytz
-    - pyyaml
-    - qt
-    - readline
-    - requests
-    - scikit-image
-    - scikit-learn
-    - scipy
-    - setuptools
-    - sip
-    - six
-    - sqlite
-    - tk
-    - toolz
-    - tornado
-    - typing
-    - wheel
-    - xz
-    - yaml
-    - zlib
-    - pymp-pypi
-    - pillow
 
 
 
