--- a/requirements/py34/requirements-pip.txt
+++ b/requirements/py34/requirements-pip.txt
@@ -5,7 +5,7 @@ bokeh==0.12.1
 chest==0.2.3
 cloudpickle==0.2.1
 colorlog==2.7.0
-ConfigArgParse==0.10.0
+ConfigArgParse==0.9.3
 cycler==0.10.0
 dask==0.11.0
 decorator==4.0.10
@@ -30,6 +30,7 @@ Pillow==3.3.0
 pox==0.2.2
 ppft==1.6.4.6
 Pygments==2.1.3
+pymp-pypi==0.2
 pyparsing==2.1.4
 python-dateutil==2.5.3
 pytz==2016.6.1
