--- a/requirements/py34/requirements-pip.txt
+++ b/requirements/py34/requirements-pip.txt
@@ -3,7 +3,8 @@ backports-abc==0.4
 bokeh==0.12.1
 chest==0.2.3
 cloudpickle==0.2.1
-ConfigArgParse==0.9.3
+colorlog==2.7.0
+ConfigArgParse==0.10.0
 cycler==0.10.0
 dask==0.11.0
 decorator==4.0.10
