--- a/requirements/py27/shot-detector.yml
+++ b/requirements/py27/shot-detector.yml
@@ -65,7 +65,8 @@ dependencies:
 - zlib=1.2.8=3
 - pip:
   - av==0.2.3
-  - configargparse==0.9.3
+  - colorlog==2.7.0
+  - configargparse==0.10.0
   - dask==0.11.0
   - pymp-pypi==0.2
   - toolz==0.8.0
