--- a/config/default.ini
+++ b/config/default.ini
@@ -16,8 +16,8 @@
 ;
 
 input-uri ={base}/{name}{ext}
-input-uri-base = /home/w495/Videos
-input-uri-name = input-file
+input-uri-base = /home/w495/Videos/input
+input-uri-name = Djadja
 input-uri-ext = .mp4
 
 
@@ -36,7 +36,7 @@ plot-save-dir = /home/w495/Sync/Dropbox/Public/stud/asp/thethis/nkp-2016/pres/im
 [Shot Detector Options]
 
 video-first-frame 	= 0
-video-last-frame 	= 60
+video-last-frame 	= 90
 as-stream			= no
 
 
