--- a/config/default.ini
+++ b/config/default.ini
@@ -18,6 +18,7 @@
 input-uri ={base}/{name}{ext}
 input-uri-base = /home/w495/Videos/input
 input-uri-name = Djadja
+                 # Tulum
 input-uri-ext = .mp4
 
 
