--- a/config/default.ini
+++ b/config/default.ini
@@ -18,7 +18,7 @@
 input-uri ={base}/{name}{ext}
 input-uri-base = /home/w495/Videos/input
 input-uri-name = Djadja
-                 # Tulum
+                 # Tulum Djadja
 input-uri-ext = .mp4
 
 
@@ -37,7 +37,7 @@ plot-save-dir = /home/w495/Sync/Dropbox/Public/stud/asp/thethis/nkp-2016/pres/im
 [Shot Detector Options]
 
 video-first-frame 	= 0
-video-last-frame 	= 90
+video-last-frame 	= 180
 as-stream			= no
 
 
