--- a/config/default.ini
+++ b/config/default.ini
@@ -15,8 +15,8 @@
 ;	input-uri	= 	Bolshie_Glaza_96.lw.und
 ;
 
-input-uri ={base}/{name}{ext}
-input-uri-base = /home/w495/Videos/input
+input-uri = ${base}/${name}${ext}
+input-uri-base = ~/Videos/input
 input-uri-name = Djadja
                  # Tulum Djadja
 input-uri-ext = .mp4
@@ -31,7 +31,7 @@ plot-height = 9.0
 plot-format = pdf
 plot-font-family = DejaVu Sans
 plot-font-size = 14
-plot-save-dir = /home/w495/Sync/Dropbox/Public/stud/asp/thethis/nkp-2016/pres/img/video/example/
+plot-save-dir = ~/Sync/Dropbox/Public/stud/asp/thethis/nkp-2016/pres/img/video/example/
 
 
 [Shot Detector Options]
