--- a/config/default.ini
+++ b/config/default.ini
@@ -31,8 +31,9 @@ plot-height = 9.0
 plot-format = pdf
 plot-font-family = DejaVu Sans
 plot-font-size = 14
-plot-save-dir = ~/Sync/Dropbox/Public/stud/asp/thethis/nkp-2016/pres/img/video/example/
-
+plot-save-root = ~/Sync/Dropbox/Public/stud/asp/thethis/
+plot-save-dir = ${root}/nkp-2016/pres/img/video/example/
+plot-save-name= ${dir}/${chart}/${name}-${ff}-${lf}.${ext}
 
 [Shot Detector Options]
 
