--- a/config/default.ini
+++ b/config/default.ini
@@ -31,14 +31,15 @@ plot-height = 9.0
 plot-format = pdf
 plot-font-family = DejaVu Sans
 plot-font-size = 14
-plot-save-root = ~/Sync/Dropbox/Public/stud/asp/thethis/
-plot-save-dir = ${root}/nkp-2016/pres/img/video/example/
+
+plot-save-root = ~/Sync/Dropbox/Public/stud/asp/thethis//@big-survey-find
+plot-save-dir = ${root}/big-survey-find/img/video/example
 plot-save-name= ${dir}/${chart}/${name}-${ff}-${lf}.${ext}
 
 [Shot Detector Options]
 
 video-first-frame 	= 0
-video-last-frame 	= 90
+video-last-frame 	= 100
 #180
 as-stream			= no
 
