--- a/config/default.ini
+++ b/config/default.ini
@@ -1,5 +1,8 @@
 
 
+[Log Options]
+;log-base = /tmp/log/shot-detector-plot
+
 [Input Options]
 
 
@@ -16,7 +19,7 @@
 ;
 
 input-uri = ${base}/${name}${ext}
-input-uri-base = ~/Videos/input
+input-uri-base = /home/ndvr/Videos/input
 input-uri-name = Djadja
                  # Tulum Djadja
 input-uri-ext = .mp4
