--- a/config/default.ini
+++ b/config/default.ini
@@ -1,7 +1,7 @@
 
 
 [Log Options]
-;log-base = /tmp/log/shot-detector-plot
+log-base = /tmp/log/shot-detector-plot
 
 [Input Options]
 
@@ -35,8 +35,8 @@ plot-format = pdf
 plot-font-family = DejaVu Sans
 plot-font-size = 14
 
-plot-save-root = ~/Sync/Dropbox/Public/stud/asp/thethis//@big-survey-find
-plot-save-dir = ${root}/big-survey-find/img/video/example
+plot-save-root = /home/ndvr/Projects/thethis/active/
+plot-save-dir = ${root}/thesis-abstract/thesis-abstract/img/pdf/
 plot-save-name= ${dir}/${chart}/${name}-${ff}-${lf}.${ext}
 
 [Shot Detector Options]
